KE-925 started with scaffold for a Context Model (#982)
* KE-925 started with scaffold for a Context Model

# TODO: make crud methods in the client
# TODO: make curd methods in the scope
# TODO: ensure that context_type is either location/time and enable/disable use of various attributes.
# TODO: write tests

* WIP commit

* first working create, delete tests against live backend.

- refactored the Scope2 -> Scope to ensure proper deprecation instead of the wrong way around.

* fixed flake errs

* fixed context filtering errs

* removed python 3.5 incompatbile type annotations.

* added edit methods #WIP

* added edit methods #WIP

* added linking/unlinking activity methods

TODO: refactor the activities to Activity Objects instead of id's

* added context methods to activity and scopes, added link/unlink methods to activity

* better context check and ensuring the f strings are removed.
we are deprecating 3.4 as well :)

* no annotations on the `Context.__init__()``

* fixing circular imports

* fixing review items

* adding new test casettes

* Extending context api version 1.2.0 with added ContextGroup enum for the `Context.group` (model property)

* refactor `Context.group` to `Context.context_group`

* reverse merge of master

Co-authored-by: Jochem Berends <jochem.berends@ke-works.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,9 @@ semver==2.13.0
 # testing
 pytest==6.2.4
 betamax==0.8.1
-coverage==5.5
+coverage~=5.5
 pytest-cov==2.12.1
-coveralls==3.1.0
+coveralls==3.0.1
 
 # documentation
 Sphinx==4.0.2
