py upgrade, blackened all code, fixed imports

--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,9 @@ commands =
 [flake8]
 max-line-length = 120
 statistics = True
-ignore = F821
+ignore = F821,W503
+# W503 line break before binary operator
+
 
 #F821 undefined name
 
