--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,7 +6,7 @@ include tox.ini
 include mypy.ini
 include .env.template
 include Pipfile
-include py.typed
+include pykechain/py.typed
 
 graft tests
 graft docs
