--- a/requirements-ci.txt
+++ b/requirements-ci.txt
@@ -1,12 +1,18 @@
 # These requirements are the most basic requirements to run pykechain (see setup.py)
 # This is equivalent to those published in the setup.py
 # These requirements are used by the CI tools to install a most basic framework.
-
 requests>=2.20.0
 envparse
 typing
 six
 jsonschema
-semver
+semver>=2.10.0
 pytz
-PyOpenSSL; python_version <= '2.7.99'
+
+# These requirements are needed for ci testing
+pytest
+pytest-runner
+pytest-cov
+pytest-xdist[psutil]
+coverage
+betamax
