Revert "checking imports"
This reverts commit 143725190fd6e1597292350f3d93abf66ceee32b.

--- a/tox.ini
+++ b/tox.ini
@@ -76,10 +76,9 @@ commands =
 [flake8]
 max-line-length = 120
 statistics = True
-ignore = F821, W503
+ignore = F821
 
 #F821 undefined name
-#W503 line break before binary operator
 
 [pydocstyle]
 ignore = D100,D105,D203,D212,D213,D416
