blackened code and flake8 is still 120 chars due to the comments.

--- a/tox.ini
+++ b/tox.ini
@@ -74,11 +74,12 @@ commands =
 
 # test settings
 [flake8]
-max-line-length = 100
+max-line-length = 120
 statistics = True
-ignore = F821
+ignore = F821,W503
 
 #F821 undefined name
+#W503 line break before binary operator
 
 [pydocstyle]
 ignore = D100,D105,D203,D212,D213,D416
