fixed some pyflakes

--- a/tox.ini
+++ b/tox.ini
@@ -64,9 +64,11 @@ deps =
     setuptools>=38.6.0
     wheel>=0.31.0
     twine>=2.0
+    pyflake
 commands =
     flake8 pykechain
     pydocstyle pykechain
+    pyflakes pykechain
     # mypy pykechain
     check-manifest
     python setup.py bdist_wheel --universal
@@ -74,7 +76,7 @@ commands =
 
 # test settings
 [flake8]
-max-line-length = 120
+max-line-length = 100
 statistics = True
 ignore = F821,W503
 
