--- a/tox.ini
+++ b/tox.ini
@@ -76,9 +76,10 @@ commands =
 [flake8]
 max-line-length = 120
 statistics = True
-ignore = F821
+ignore = F821,W503
 
 #F821 undefined name
+#W503 line break before binary operator
 
 [pydocstyle]
 ignore = D100,D105,D203,D212,D213,D416
