KE-1594 added instantiate and clone to forms

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,7 +39,7 @@ repos:
     hooks:
     -   id: flake8
         args:
-        - --ignore=F821
+        - --ignore=F821,W503
         files: pykechain/.*
 -   repo: https://github.com/mgedmin/check-manifest
     rev: '0.44'
