pytest -n auto instead of logical

--- a/.github/workflows/python_testing.yml
+++ b/.github/workflows/python_testing.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Perform Testing
       run: |
-        pytest -n logical --cov=pykechain tests
+        pytest -n auto --cov=pykechain tests
 
     - name: Check docs and distribution
       if: matrix.python-version == 3.8
