--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ mypy==0.950; python_version >= '3.4'
 pre-commit==2.18.1
 
 # for package management (uploads)
-twine~=3.0; python_version >= '3.6'
-twine==4.0.0; python_version <= '3.5.99'
+twine~=4.0; python_version >= '3.6'
+twine~=2.0; python_version <= '3.5.99'
 
 pytz==2022.1
