--- a/requirements.txt
+++ b/requirements.txt
@@ -3,35 +3,35 @@ requests==2.28.1
 envparse==0.2.0
 
 # json validation (inspector)
-jsonschema==4.6.2
+jsonschema==4.17.3
 
 # for version comparison
 semver==2.13.0
 
 # testing
-pytest==7.1.2
-pytest-xdist[psutil]==2.5.0
+pytest==7.2.0
+pytest-xdist[psutil]==3.1.0
 betamax==0.8.1
-coverage==6.4.1
-pytest-cov==3.0.0
+coverage==7.0.4
+pytest-cov==4.0.0
 coveralls==3.3.1
 
 # documentation
-Sphinx==5.0.1
-nbsphinx==0.8.9
+Sphinx==6.1.2
+nbsphinx==0.8.11
 
 # integration
-tox==3.25.1
+tox==4.2.6
 
 # code style
-flake8==4.0.1
-importlib-metadata
-pydocstyle==6.1.1
-mypy==0.961; python_version >= '3.4'
-pre-commit==2.19.0
+flake8==6.0.0
+importlib-metadata==6.0.0
+pydocstyle==6.2.3
+mypy==0.991; python_version >= '3.4'
+pre-commit==2.21.0
 
 # for package management (uploads)
-twine~=4.0; python_version >= '3.7'
+twine==4.0.2; python_version >= '3.7'
 twine~=3.0; python_version <= '3.6'
 
-pytz==2022.1
+pytz==2022.7
