--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ mypy==0.991; python_version >= '3.4'
 pre-commit==2.21.0
 
 # for package management (uploads)
-twine==4.0.2; python_version >= '3.7'
+twine~=4.0; python_version >= '3.7'
 twine~=3.0; python_version <= '3.6'
 
 pytz==2022.7
