--- a/.github/workflows/python_testing.yml
+++ b/.github/workflows/python_testing.yml
@@ -10,7 +10,7 @@ jobs:
       max-parallel: 6
       fail-fast: False
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "pypy-3.8"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "pypy-3.8"]
 
     steps:
     - uses: actions/checkout@v3
@@ -30,7 +30,7 @@ jobs:
         pytest -n auto --cov=pykechain tests
 
     - name: Check docs and distribution
-      if: matrix.python-version == 3.8
+      if: matrix.python-version == 3.10
       run: |
         pip install flake8 pydocstyle check-manifest readme_renderer[md] twine>=2.0.0
 
@@ -41,8 +41,9 @@ jobs:
         twine check dist/*
 
     - name: Upload coverage to coveralls.io
-      if: matrix.python-version == 3.8
+      if: matrix.python-version == 3.10
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: |
         pip install -U coveralls>=1.11.1
