fixed dist and docs and tox

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ python =
     3.8: py38, dist_and_docs
 
 [testenv]
-passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
+passenv = TRAVIS, TRAVIS_JOB_ID, TRAVIS_BRANCH
 deps =
     pytest
     six
@@ -35,7 +35,7 @@ basepython =
     py3: python3.8
 
 [testenv:py38]
-passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
+passenv = TRAVIS, TRAVIS_JOB_ID, TRAVIS_BRANCH
 deps =
     pytest
     six
@@ -51,7 +51,7 @@ commands =
     - coveralls
 
 [testenv:dist_and_docs]
-passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
+passenv = TRAVIS, TRAVIS_JOB_ID, TRAVIS_BRANCH
 basepython = python3
 deps =
     check-manifest
