--- a/.github/workflows/python_testing.yml
+++ b/.github/workflows/python_testing.yml
@@ -26,6 +26,7 @@ jobs:
         pip install -r requirements-ci.txt
 
     - name: Perform Testing
+      if: matrix.python-version != 3.10
       run: |
         pytest -n auto tests
 
@@ -40,12 +41,12 @@ jobs:
         python setup.py bdist_wheel --universal
         twine check dist/*
 
-    - name: Upload coverage to coveralls.io
+    - name: Perform coverage tests and upload to coveralls.io
       if: matrix.python-version == 3.10
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: |
         pip install -U coveralls>=3.3.1
-        coverage run --source=pykechain -m pytest tests
+        coverage run --source=pykechain -m pytest -n auto tests
         coveralls
