--- a/.github/workflows/python_testing.yml
+++ b/.github/workflows/python_testing.yml
@@ -10,7 +10,7 @@ jobs:
       max-parallel: 6
       fail-fast: False
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "pypy-3.8"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
