--- a/.github/workflows/python_testing.yml
+++ b/.github/workflows/python_testing.yml
@@ -10,7 +10,7 @@ jobs:
       max-parallel: 6
       fail-fast: False
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
     - uses: actions/checkout@v3
