--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,23 @@
-# basis
+# Production Dependencies (from setup.py)
 requests==2.32.3
 envparse==0.2.0
-
-# json validation (inspector)
 jsonschema==4.23.0
-
-# for version comparison
 semver==3.0.4
+pytz==2025.2
 
-# testing
-pytest==8.3.5
-pytest-xdist[psutil]==3.6.1
-betamax==0.9.0
-
-coverage~=7.8.0  # pinned to <7 as coveralls is preventing v7 for coverage
-pytest-cov==6.0.0
-coveralls==4.0.1
+# Development Dependencies
+matplotlib
+jupyter==1.1.1
+Sphinx>=2.0
+nbsphinx==0.9.7
 Pillow==11.2.1
 
-# documentation
-Sphinx==7.2.6; python_version >= '3.9'
-Sphinx~=7.1.2; python_version <= '3.8'
-nbsphinx==0.9.7
-
-# integration
-tox==4.25.0
-
-# code style
+# Testing Dependencies
+pytest==8.3.5
+betamax==0.9.0
 flake8==7.2.0
-importlib-metadata==8.7.0
 pydocstyle==6.3.0
-mypy==1.15.0; python_version >= '3.4'
-pre-commit==4.2.0
-
-# for package management (uploads)
-twine~=6.1; python_version >= '3.7'
-twine~=3.0; python_version <= '3.6'
-
-pytz==2025.2
+mypy==1.15.0
+twine==6.1.0
+tox==4.25.0
+coverage==7.8.0
