Update tox.ini to remove universal flag from bdist_wheel command

--- a/tox.ini
+++ b/tox.ini
@@ -53,7 +53,7 @@ commands =
     pydocstyle pykechain
     # mypy pykechain
     check-manifest
-    python setup.py bdist_wheel --universal
+    python setup.py bdist_wheel
     twine check dist/*
 
 # test settings
