Remove deprecated files and configurations; migrate to pyproject.toml for project metadata and dependencies. Deleted .pre-commit-config.yaml, build_wheel.sh, setup.py, setup.cfg, mypy.ini, and tox.ini. Updated MANIFEST.in and requirements.txt for improved packaging and dependency management. Adjusted GitHub workflows for building and testing to align with new structure.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,18 +7,18 @@ include tox.ini
 include mypy.ini
 include .env.template
 include Pipfile
-include pykechain/py.typed
 
+# pykechain/py.typed is handled by package_data in pyproject.toml for wheels
+# and should be included in sdists automatically if it's part of the package.
+
+# To include tests and docs in the sdist (source distribution):
 graft tests
 graft docs
 prune docs/_build
 
-global-exclude *.pyc
-global-exclude .ipynb_checkpoints/*
-exclude *.sh
-exclude requirements-ci.txt
-exclude *-OFF
-exclude *.yml
-exclude *.yaml
-exclude .editorconfig
+# General excludes for sdists
+global-exclude *.py[cod]
+global-exclude __pycache__
+global-exclude .DS_Store
 exclude .secrets.baseline
+exclude .editorconfig
