--- a/.github/workflows/python_publish.yml
+++ b/.github/workflows/python_publish.yml
@@ -16,12 +16,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine>=2.0.0
+        pip install build setuptools wheel twine>=2.0.0
     - name: Build and publish
       env:
         TWINE_USERNAME: '__token__'
         TWINE_PASSWORD: ${{ secrets.PYPI_PYKECHAIN_TOKEN }}
         TWINE_NON_INTERACTIVE: '1'
       run: |
-        python setup.py sdist bdist_wheel --universal
-        twine upload dist/pykechain-* --disable-progress-bar
+        python -m build
+        twine upload dist/* --disable-progress-bar
