Update project configuration: remove requirements files, add Python 3.13 support, and adjust GitHub workflows. Deleted requirements-ci.txt and requirements.txt to streamline dependency management. Updated pyproject.toml and python_testing.yml to reflect the latest Python version compatibility.

--- a/.github/workflows/python_testing.yml
+++ b/.github/workflows/python_testing.yml
@@ -9,7 +9,7 @@ jobs:
       max-parallel: 6
       fail-fast: False
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"] # Aligned with pyproject.toml classifiers
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"] # Updated to match pyproject.toml classifiers
 
     steps:
     - uses: actions/checkout@v4
