--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,10 @@ include-package-data = true
 version = { attr = "pykechain.__about__.version" }
 
 [tool.ruff]
-line-length = 120
+line-length = 100
+exclude = ["tests"]
+
+[tool.ruff.lint]
 # Select Flake8 rules (F) and Pyflakes (F). Add others as desired (e.g., E for pycodestyle errors, W for pycodestyle warnings).
 # Ruff enables many by default. `F821` (undefined name) is covered.
 # `W503` (line break before binary operator) is respected by default if not using Black, or can be added to ignore.
@@ -89,7 +92,6 @@ line-length = 120
 # Ruff also has its own rule codes.
 select = [
     "F", "E", "W", # Standard flake8
-    "I", # isort
     "D", # pydocstyle
     # Add other categories as you see fit, e.g. "C90" for mccabe complexity
 ]
@@ -97,17 +99,17 @@ ignore = [
     "F821", # undefined name (was ignored in flake8)
     # Pydocstyle ignores from tox.ini translated to Ruff codes:
     "D100", # Missing docstring in public module
+    "D101", # Missing docstring in public class
+    "D102", # Missing docstring in public method
     "D105", # Missing docstring in magic method
     "D203", # 1 blank line required before class docstring (use D211 instead for consistency if using Black)
     "D212", # Multi-line docstring summary should start at the first line
     "D213", # Multi-line docstring summary should start at the second line (conflicts with D212)
     # "D416", # Section name should end with a semicolon - No direct D416 in Ruff's pydocstyle, check specific rule if needed
+    "I001", # Import block is un-sorted or un-formatted
 ]
-# Ruff discovers pykechain directory automatically.
-# If you need to specify target files/dirs:
-# files = ["pykechain", "tests"] # Adjust if tests dir is also to be linted with same rules
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 # Some pydocstyle rules that don't have direct top-level ignores might be configured here
 # For D416 ("Section name should end with a semicolon"), Ruff's pydocstyle integration follows numpy/google conventions.
 # If specific convention is desired:
@@ -116,5 +118,5 @@ convention = "pep257" # or "google", "numpy" - this can affect D203, D212, D213 
 [tool.mypy]
 ignore_missing_imports = true
 strict_optional = true
-# files = ["pykechain", "tests"] # Specify files/dirs to check
-# exclude = ['venv', '\.tox', 'build', 'docs'] # Default exclusions often cover venv
+files = ["pykechain"] # Specify files/dirs to check
+exclude = ['venv', '\.tox', 'build', 'docs'] # Default exclusions often cover venv
