--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,7 @@ ignore = [
     "D101", # Missing docstring in public class
     "D102", # Missing docstring in public method
     "D105", # Missing docstring in magic method
+    "D200", # One-line docstring should fit on one line
     "D203", # 1 blank line required before class docstring (use D211 instead for consistency if using Black)
     "D212", # Multi-line docstring summary should start at the first line
     "D213", # Multi-line docstring summary should start at the second line (conflicts with D212)
