--- a/.github/workflows/python_publish.yml
+++ b/.github/workflows/python_publish.yml
@@ -8,20 +8,30 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
     - name: Set up Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v4
       with:
         python-version: '3.12'
-    - name: Install dependencies
+    - name: Install uv
       run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine>=2.0.0
-    - name: Build and publish
+        curl -LsSf https://astral.sh/uv/install.sh | sh
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
+    - name: Cache uv
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/uv
+        key: ${{ runner.os }}-uv-${{ hashFiles('pyproject.toml', 'uv.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-uv-
+    - name: Sync dependencies for build
+      run: |
+        uv sync
+    - name: Build
+      run: |
+        uv build
+    - name: Publish to PyPI
       env:
-        TWINE_USERNAME: '__token__'
-        TWINE_PASSWORD: ${{ secrets.PYPI_PYKECHAIN_TOKEN }}
-        TWINE_NON_INTERACTIVE: '1'
+        UV_PYPI_TOKEN: ${{ secrets.PYPI_PYKECHAIN_TOKEN }}
       run: |
-        python setup.py sdist bdist_wheel --universal
-        twine upload dist/pykechain-* --disable-progress-bar
+        uv publish
