--- a/.github/workflows/python_testing.yml
+++ b/.github/workflows/python_testing.yml
@@ -19,27 +19,36 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install basic dependencies
+    - name: Install uv
       run: |
-        python -m pip install --upgrade pip
-        pip install -U setuptools>=38.6.0 wheel>=0.31.0
-        pip install -r requirements-ci.txt
+        curl -LsSf https://astral.sh/uv/install.sh | sh
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+    - name: Cache uv
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/uv
+        key: ${{ runner.os }}-uv-${{ hashFiles('pyproject.toml', 'uv.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-uv-
+
+    - name: Sync dependencies (locked)
+      run: |
+        uv sync --group dev
 
     - name: Perform Testing
       if: matrix.python-version != 3.12
       run: |
-        pytest -n auto tests
+        uv run pytest -n auto tests
 
     - name: Check docs and distribution
       if: matrix.python-version == 3.12
       run: |
-        pip install flake8 pydocstyle check-manifest readme_renderer[md] twine>=2.0.0
-
-        flake8 pykechain --count --show-source --statistics
-        pydocstyle pykechain
-        check-manifest
-        python setup.py bdist_wheel --universal
-        twine check dist/*
+        uv run flake8 pykechain --count --show-source --statistics
+        uv run pydocstyle pykechain
+        uv run check-manifest
+        uv build
+        # uv has built-in check in build; if needed, additional verification can be added
 
     - name: Perform coverage tests and upload to coveralls.io
       if: matrix.python-version == 3.12
@@ -47,6 +56,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
       run: |
-        pip install -U coveralls>=3.3.1
-        coverage run --source=pykechain -m pytest -n auto tests
-        coveralls
+        uv run pip install -U "coveralls>=3.3.1"
+        uv run coverage run --source=pykechain -m pytest -n auto tests
+        uv run coveralls
